Mader header background color white to fix overflow issue on 320px width.

--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@ table {
 	background color: #ffffff;}
 
 header {
+  background-color: #fff;
 	padding: 2%;
 	border-top: 3px solid #000000;}
 header h1 {
